attempt to run on Colab so commited this notebook changes

--- a/docs/source/modules/documentation/tutorials/tutorial_4_pruning.ipynb
+++ b/docs/source/modules/documentation/tutorials/tutorial_4_pruning.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from chop import MaseGraph\n",
     "\n",
-    "mg = MaseGraph.from_checkpoint(f\"{Path.home()}/tutorial_3_qat\")"
+    "mg = MaseGraph.from_checkpoint(f\"{Path.home()}/tutorial_3_qat_12bit6frac\")"
    ]
   },
   {
@@ -817,11 +817,109 @@
     "eval_results = trainer.evaluate()\n",
     "print(f\"Evaluation accuracy: {eval_results['eval_accuracy']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'chop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-1540201260.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mchop\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMaseGraph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mchop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_tokenized_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_trainer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mchop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpasses\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpasses\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'chop'",
+      "",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from chop import MaseGraph\n",
+    "from chop.tools import get_tokenized_dataset, get_trainer\n",
+    "import chop.passes as passes\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "dataset, tokenizer = get_tokenized_dataset(\n",
+    "    dataset=dataset_name,\n",
+    "    checkpoint=tokenizer_checkpoint,\n",
+    "    return_tokenizer=True,\n",
+    ")\n",
+    "\n",
+    "sparsity_list = [0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]\n",
+    "\n",
+    "methods = [\"l1-norm\", \"random\"]\n",
+    "\n",
+    "# store best accuracies per method\n",
+    "best_acc_l1    = []\n",
+    "best_acc_random = []\n",
+    "\n",
+    "for method in methods:\n",
+    "    print(f\"\\n=== Pruning method: {method} ===\")\n",
+    "    method_best_accs = []\n",
+    "\n",
+    "    for s in sparsity_list:\n",
+    "        print(f\"\\nApplying pruning with sparsity {s}, method {method}\")\n",
+    "\n",
+    "        # fresh model for each (method, sparsity)\n",
+    "        mg = MaseGraph.from_checkpoint(f\"{Path.home()}/tutorial_3_qat_12bit6frac\")\n",
+    "\n",
+    "        pruning_config = {\n",
+    "            \"weight\": {\n",
+    "                \"sparsity\": s,\n",
+    "                \"method\": method,\n",
+    "                \"scope\": \"local\",\n",
+    "            },\n",
+    "            \"activation\": {\n",
+    "                \"sparsity\": s,\n",
+    "                \"method\": method,\n",
+    "                \"scope\": \"local\",\n",
+    "            },\n",
+    "        }\n",
+    "\n",
+    "        mg, _ = passes.prune_transform_pass(mg, pass_args=pruning_config)\n",
+    "\n",
+    "        trainer = get_trainer(\n",
+    "            model=mg.model,\n",
+    "            tokenized_dataset=dataset,\n",
+    "            tokenizer=tokenizer,\n",
+    "            evaluate_metric=\"accuracy\",\n",
+    "            num_train_epochs=5,\n",
+    "        )\n",
+    "\n",
+    "        trainer.train()\n",
+    "\n",
+    "        # collect max eval_accuracy from log_history across all epochs\n",
+    "        eval_results = trainer.evaluate()\n",
+    "        print(f\"Evaluation accuracy: {eval_results['eval_accuracy']}\")\n",
+    "        method_best_accs.append(eval_results['eval_accuracy']   )\n",
+    "\n",
+    "    # store into appropriate list\n",
+    "    if method == \"l1-norm\":\n",
+    "        best_acc_l1 = method_best_accs\n",
+    "    elif method == \"random\":\n",
+    "        best_acc_random = method_best_accs\n",
+    "\n",
+    "# Plot both curves\n",
+    "plt.figure()\n",
+    "plt.plot(sparsity_list, best_acc_l1, marker=\"o\", label=\"L1-norm pruning\")\n",
+    "plt.plot(sparsity_list, best_acc_random, marker=\"s\", label=\"Random pruning\")\n",
+    "plt.xlabel(\"Sparsity value\")\n",
+    "plt.ylabel(\"Best eval accuracy\")\n",
+    "plt.title(\"Accuracy vs Sparsity for different pruning methods on QAT model\")\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mase",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -835,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
